[tool.poetry]
name = "youtube-livechat-stats"
version = "0.1.0"
description = ""
authors = ["belisards <adrianobf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = ">=4.12.2"
requests = "^2.32.3"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
